# kilt-parachain

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  para-200-genesis  para-200-wasm  rococo-custom-plain.json  rococo-custom.json  rococo-local-v1-raw_2-validators.json  rococo-local-v1_2-validators.json  start-local-node.sh
.github/workflows/: test-code.yml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
pallets/parachain-info/: Cargo.toml
pallets/parachain-info/src/: lib.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  portablegabi.rs
runtime/src/attestation/: mod.rs  tests.rs
runtime/src/ctype/: mod.rs  tests.rs
runtime/src/delegation/: mod.rs  tests.rs
runtime/src/did/: mod.rs  tests.rs
runtime/src/error/: mod.rs
src/: chain_spec.rs  command.rs  service.rs
