[profile.release]
panic = "unwind"

[workspace]
members = [
	"node",
	"runtime",
]

[patch.crates-io]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "2.0.0-rc5" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "2.0.0-rc5" } 
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "2.0.0-rc5" } 
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "2.0.0-rc5" } 
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "2.0.0-rc5" } 
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "2.0.0-rc5" } 
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "2.0.0-rc5" } 
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "2.0.0-rc5" } 