[profile.release]
panic = 'unwind'

[workspace]
members = [
	'node',
	'runtime',
]

[patch.crates-io]
frame-benchmarking = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
frame-metadata = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
frame-support = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
frame-support-procedural = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
frame-support-procedural-tools = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
frame-support-procedural-tools-derive = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
frame-system = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
pallet-balances = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-api = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-api-proc-macro = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-application-crypto = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-arithmetic = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-core = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-debug-derive = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-externalities = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-inherents = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-io = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-panic-handler = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-runtime = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-runtime-interface = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-runtime-interface-proc-macro = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-state-machine = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-std = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-storage = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-tracing = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-trie = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-version = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
sp-wasm-interface = {git = 'https://github.com/paritytech/substrate', branch = 'rococo-branch'}
