[package]
name = "kilt-collator-runtime"
version = "0.23.0"
authors = [ "KILT <info@kilt.io>" ]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

# KILT dependencies
bitflags = { version = "1.2.1", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

attestation = { version = "0.23.0", default-features = false, git = "https://github.com/kiltprotocol/mashnet-node", branch = "develop" }
ctype = { version = "0.23.0", default-features = false, git = "https://github.com/kiltprotocol/mashnet-node", branch = "develop" }
delegation = { version = "0.23.0", default-features = false, git = "https://github.com/kiltprotocol/mashnet-node", branch = "develop" }
did = { version = "0.23.0", default-features = false, git = "https://github.com/kiltprotocol/mashnet-node", branch = "develop" }
error = { version = "0.23.0", default-features = false, git = "https://github.com/kiltprotocol/mashnet-node", branch = "develop" }
portablegabi = {  version = "0.23.0", default-features = false, git = "https://github.com/kiltprotocol/mashnet-node", branch = "develop" }

# Substrate dependencies
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

# Cumulus dependencies
cumulus-runtime = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = "35f60b1e90145714730d372b5067d9c392884ac9" }
cumulus-parachain-upgrade = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = "35f60b1e90145714730d372b5067d9c392884ac9" }
cumulus-message-broker = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = "35f60b1e90145714730d372b5067d9c392884ac9" }
cumulus-upward-message = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = "35f60b1e90145714730d372b5067d9c392884ac9" }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = "35f60b1e90145714730d372b5067d9c392884ac9" }
parachain-info = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = "35f60b1e90145714730d372b5067d9c392884ac9" }
cumulus-token-dealer = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = "35f60b1e90145714730d372b5067d9c392884ac9" }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }
[features]
default = [ "std" ]
std = [
	# "attestation/std",
	# "ctype/std",
	# "did/std",
	# "error/std",
	# "delegation/std",
	# "portablegabi/std",
	"codec/std",
	"serde",
	"sp-arithmetic/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-indices/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-message-broker/std",
	"cumulus-upward-message/std",
	"cumulus-primitives/std",
	"cumulus-token-dealer/std",
	"frame-system-rpc-runtime-api/std",
]
# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	"cumulus-upward-message/runtime-wasm",
]
